--- a/本地已有项目关联到远程仓库.md
+++ b/本地已有项目关联到远程仓库.md
@@ -8,5 +8,14 @@
   git init 
   ```
 
-- 
+- 本地关联远程仓库
+```
+git remote add origin git@github.com:xuebimi/git-test.git
+```
+- 提交本地的项目
+```
+git add .
+git commit -m 本地提交的内容
+git push -u origin master
+```
 
