完善步骤：增加配置SSH秘钥

--- a/本地已有项目关联到远程仓库.md
+++ b/本地已有项目关联到远程仓库.md
@@ -1,6 +1,14 @@
 # 本地已有项目关联到远程仓库
 
-- 新建远程仓库
+- 本地打开gitBash配置SSH,先生成秘钥对
+
+  ```
+  ssh-keygen -t rsa -b 4096 -C "your_email@example.com"
+  ```
+
+- 将公钥id_rsa.pub里的内容复制到自己的远程git账户SSH keys里
+
+- 新建远程仓库，图形化界面操作
 
 - 在本地项目目录下，gitBash输入初始化项目命令
 
@@ -12,6 +20,7 @@
   ```
   git remote add origin git@github.com:xuebimi/git-test.git
   ```
+
 - 提交本地的项目
   ```
   git add .
