远程仓库名字更改后本地代码提交测试

--- a/本地已有项目关联到远程仓库.md
+++ b/本地已有项目关联到远程仓库.md
@@ -8,9 +8,9 @@
 
 - 将公钥id_rsa.pub里的内容复制到自己的远程git账户SSH keys里
 
-- 新建远程仓库，图形化界面操作
+- 新建远程仓库(图形化界面操作)
 
-- 在本地项目目录下，gitBash输入初始化项目命令
+- 在本地项目目录下，gitBash里输入初始化项目命令
 
   ```
   git init 
